EPBDS-15331 Remove references on the deprecated API